fixing alignment for testimonials page

--- a/public/css/fem.css
+++ b/public/css/fem.css
@@ -174,13 +174,18 @@ p {
 #app {
 	padding-top: 50px;
 	text-align: left;
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
 }
+
 #app.testimonials h2 {
 	text-align: center;
 }
 #app .test-img {
 	width: 100%;
 	height: auto;
+	max-width: 250px;
 }
 
 #app .test {
